--- a/integrity/IntegrityDesignRes.qrc
+++ b/integrity/IntegrityDesignRes.qrc
@@ -1,5 +1,6 @@
 <RCC>
     <qresource prefix="/">
         <file>qml/IntegrityView.qml</file>
+        <file>qml/WeekWidget.qml</file>
     </qresource>
 </RCC>
